--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Anjani Lal Mandir Trust</title>
 	</head>
 	<body>
-	# Work in progress
+		<h1>Work in progress</h1>
+	# 
 	</body>
 	</html>
 	
