message has been updated

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<title>Anjani Lal Mandir Trust</title>
 	</head>
 	<body>
-		<h1>Work in progress</h1>
-	# 
+		<h1>Work in progress, site will be up and running after sometime</h1>
 	</body>
 	</html>
 	
