--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <script type="text/javascript" src="plugin/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="plugin/jquery.cycle2.min.js"></script>
 <script src="plugin/anjaniCal.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62316744-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </head>
 <script>
    $(document).ready(function(){
