--- a/pages/shivmandir.html
+++ b/pages/shivmandir.html
@@ -4,6 +4,16 @@
 <meta charset="utf-8">
 <title>श्री द्वादश ज्योतिर्लिगेश्वर महादेव मंदिर</title>
 <link href="../css/submain.css" rel="stylesheet" type="text/css">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62316744-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 <div id="wapper">
