Revert "enables bootstrap and few changes in gcal"
This reverts commit 3965b640a9ff79f7ae78d357b9b55f21b08d0ecc.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Anjani Lal Mandir Trust</title>
 <link href="css/main.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
 <script type="text/javascript" src="plugin/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="plugin/jquery.cycle2.min.js"></script>
-<script type="text/javascript"  src="plugin/bootstrap.js"></script>
 <script src="plugin/anjaniCal.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -89,7 +86,7 @@
 </script>
 <!-- End of page navigation script -->
 <body>
-<div id="wapper" class="container">
+<div id="wapper">
   <div id="topwapper">
     <header id="mainheader">
       <header id="subheader1"><h6><b>AA जय श्री राम AA जय श्री अंजनीलाल AA ॐ नमो शिवाय AA</b></h6></header>
