Site has been upgraded to final release as per design, contents needs to be updated

--- a/pages/shivmandir.html
+++ b/pages/shivmandir.html
@@ -17,15 +17,34 @@
 </head>
 <body>
 <div id="wapper">
-
-<div id="heading">
-<h1>श्री द्वादश ज्योतिर्लिगेश्वर महादेव मंदिर</h1>
-</div>
-
 <div id="leftimgpart">
-<img src="../images/03.jpg" class= "textWrapLeft" alt="" width="800" height="348"/><p class="articleText">भगवान द्वादश ज्योतिर्लिगेश्वर महादेव जी के मंदिर कि आकृति एक शिवलिंग के आकार की  है  जो करीब ५० फीट ऊँचा है जिसका व्यास ३० फीट है । इस पर करीब २०० फीट लम्बा नाग लिपटा  हुआ है । जिसका फन करीब २२ फीट है । इस मंदिर के बाहर एवं अन्दर श्वेत मकराना संगमरमर लगा हुआ है 
-अन्दर के संगमरमर में प्राकृतिक रूप से शिव लिंग , मृगछाला एवं हाथ  जोड़ने कि आकृति बनी हुई है । इस मंदिर में व<img src="../images/shivling.jpg" class= "textWrapRight" width="600" height="399" alt=""/>िराजमान शिवलिंग देश के कुछ गिने चुने शिवलिंगों में से एक है जिसमे बारह ज्योतिर्लिगों का समावेश है । इस शिवलिंग में 	‌प्राकृतिक रूप से ॐ कि आकृति बनी हुई है इनकी पूजा , अर्चना एवं अभिषेक से बारह ज्योतिर्लिगों की  पूजा का फल प्राप्त होता है । इस मंदिर में बारह विशेषताएं है जो दर्शनीय है ।
-</p>
+<h1>Jh Onkn'kT;ksfrfyZxs'oj egknso eafnj</h1>
+<pre class="articleText"><img src="../images/siwaleSide.jpg" class= "textWrapLeft" alt=""/>Hkxoku vatuh yky th ds efUnj ds fuekZ.k ds ckn Hkxoku Jh vatuh yky th us efUnj ifjlj es ,d f'koky; fuekZ.k dh çsj.kk nh A lfefr lnL;ksa us fopkj dj fu.kZ; fy;k fd Hkxoku Jh vatuh yky th ds efUnj ds lkeus fLFkr ,d cMh >hy ds e/; ,d NksVk lk ty efUnj ¼f'koky;½ dk fuekZ.k djk;k tk; A fuekZ.k es lcls cड़h leL;k oks >hy Fkh D;ksfd >hy vkdkj es fo'kky rFkk cgqr xgjh Fkh mles gtkjks dh la[;k esa tgjhys lk¡i] fcPNq ,oe tho tarq Fks A ysfdu Hkxoku dks f'koky; rks vU; LFkku ij cuokuk Fkk blfy;s mUgksaus fo'o ds egku /keZ lezkV Lokeh Jh djik=h th egkjkt ds mÙkjkf/kdkjh f'k"; /keZ lezkV Lokeh pkSrU; czãpkjh th egkjkt dks vius jktlh oSHko ds lkFk uojk=h egksRlo es çopu gsrq i/kkjus dh Loh—fr ç/kku djkbZ A egkjkt th fu;r le; ij vius yko y'dj ds lkFk efUnj /kke ij i/kkjs tSls gh mUgksaus tehu ij iSj j[kk A mUgsa ,d >Vdk lk eglwl gqvk rHkh mUgksaus ogk¡ Lokxr ds fy;s mifLFkr lnL;ksa ls dgk dh ;s rks ikou /kjrh gS A ;g LFkku rks igys lar egkRekvks dh riksLFkyh jgk gS] ge Hkh ;gk¡ çopu ds lkFk&lkFk LQfVd] ikjn]  uhye ef.k vkfn cgqewY; jRuksa ls fufeZr f'ko fyaxks dk vfHk"ksd djsxs A Lokeh th egkjkt us vfHk"ksd dk le; çkr: 5 cts j[kk lfefr lnL;ksa us lkspk fd bruh lqcg dkSu vk;sxk A ysfdu Hkxoku dh —ik ,oe~ egkjkt Jh dh flf) dh fot; gqbZ A igys fnu gh djhc 100 HkkbZ cgu vk;s mlds ckn rhoZ xfr ls la[;k cड़h] ,d nks fnu ds ckn rks ,slh fLFkfr cuh dh lSdड़ks dh la[;k es Hkätu mfpr LFkku ikus ds fy;s Luku dj jkf= 3 cts ls gh vfHk"ksd LFky vkdj cSB tkrs Fks A rkfd vfHk"ksd ds vPNs ls n'kZu gks lds A lfefr lnL;ksa us ,slh egku foHkwfr ls f'koky; fuekZ.k gsrq LFkku p;u djus dk fuosnu fd;k A /keZ lezkV Lokeh th us Hkxoku Jh vatuh yky th ds ikl dk LFkku crk;k A mlh LFkku ij iwT; Lokeh th ds dj deyks ls uojk=h ds ikou ioZ ij Hkwfe iwtu djkdj 'kh?kz fuekZ.k dk;Z çkjEHk fd;k x;k A djhc 5 o"kZ esa efUnj dk fuekZ.k dk;Z iw.kZ gqvk A lu~ 2003 dks egk f'kojkf= ds ikou ioZ ij fo'kky Lrj ij çk.k çfr"Bk egksRlo euk;k x;k A ftles gtkjks ukxfjdks ds le{k gksus okys peRdkjks dk o.kZu Øe ls djuk Hkh vko';d gS A
+çk.k çfr"Vk egksRlo esa gq,s peRdkjks es ls dqN fuEu gS A
+1 & Hkxoku~ Onkn'kT;ksfrfyZxs'oj egknso eafnj ds f'k[kj ,d f'kofyax ds vkdkj dk gS A ftl ij ,d fo'kky ukx dk Qu Nk;k fd;s gq,s gS A ml ij e/kq efD[k;ks ds fo'kky 6 NÙks Fks A lHkh VªLVh jkr rd fQØ djrs jgs fd lqcg dSls f'k[kj ij dy'k ,oe~ /ot pok;sxs] ysfdu ,slk peRdkj gqvk fd lqcg lHkh 6 NÙkks dh e/kq efD[k;k¡ ogk¡ ls mM pqdh Fkh A
+2 & f'ko fyax 5 fQV Å¡pk ,d gh f'kyk dk cuk gqvk gS A tks cgqr Hkkjh Fks] mUgs ns[k dj fQØ gks jgh Fkh fd dSls bUgs uxj es fudyus okyh 'kksHkk ;k=k es ys tk;saxs vkSj dSls efUnj es fojkteku djsxs ysfdu Lor: ,d eqfLye ifjokj ds uo;qodks us bl lsok dks Lohdkj fd;k rFkk bl dk;Z dks [kq'kh [kq'kh iw.kZ fd;k A
+3 & çk.k çfr"Bk egksRlo ds fnu djhc ,d yk[k ipkl gtkj ekrk] cgu ,oe~ Hkkb;ks us egk çlknh ¼Hkkstu½ xzg.k dh ysfdu dgh Hkh uke ek= Hkh v'kkafr] lkexzh dk vHkko] xanxh] ijkslxkjh ,oa Lokxr es deh ns[kus dks ugha feyh A ml fnu uxj ,oe~ vkl ikl ds xzkeks esa fdlh ds ?kj es Hkh Hkkstu ugha cuk Fkk lcus efUnj ij gh çlknh xzg.k dh Fkh A
+4 – cwUnh ¼uqdfr½ dh feBkbZ dh deh çkjEHk ds rhu ?k.Vks esa gh eglwl gksus yxh Fkh] Hkxoku ls ykt j[kus dh çkFkZuk dh rks ,slk peRdkj gqvk fd [kwc ijkslus ij Hkh cwanh es dksbZ deh fn[kkbZ ugha ns jgh Fkh A nwljs fnu efUnj ij vkus okys gj n'kZukFkhZvks dks [kwc çlknh nh xbZ A rhljs fnu uxj ds çR;sd Ldwyks esa fMCcs Hkj&Hkj ds cwanh dk çlkn forfjr fd;k rc tkdj cwanh [kRe gqbZ A
+5 & çk.k çfr"Bk ds fnu lqcg ls jkr rd ckny Nk;s jgs lkjs fnu cgqr ckjhd Qqgkj tSlh dwyj ls gksrh gS gksrh jgh ysfdu tehu lq[kh gh jgh A vçSy ekg esa bruh BaMkbZ gksuk ,d peRdkj gh gS A
+6 & bl fnu lHkh usrk] tuçfrfuf/k] O;kikjh] Jfed] fdlku] cMk] NksVk] vehj] xjhc] fgUnw] eqfLye] fl[k lHkh viuk dke NksM dj bl rjg lsok esa yxs Fks tSls muds ?kj dk gh dke gks A 
+
+Hkxoku T;ksfrfyaxs'oj egknso efUnj dh ckjg fo'ks"krk, gS tks vU; dgh ,d gh LFkku esa feyuh vlEHko gS] tks fuEu gS A<img src="../images/shivling.jpg" class= "textWrapRight" alt=""/>
+1 & efUnj dk vkdkj f'ko fyax dk gS A ftl dh Å¡pkbZ djhc 50 QhV vkSj O;kl 30 QhV gS A
+2 & bl f'ko fyax ds pkjks vksj djhc 200 QhV yEck ukx fyiVk gS] ftldk Qu 25 QhV pkSड़k gS A
+3 & eafnj es fojkteku f'ko fyax tks dkys laxejej fd ,d gh f'kyk ls cuk gS] ml ij çkdfrZd ॐ dh vk—fr cuh gqbZ gS] tks vU;= nqyZHk gS A
+4 & f'koky; dh vUnj nhokjks ij yxs laxejej ij çkdfrZd :i ls f'ko fyax] e`xNkyk ,oe~ gkFk ls ç.kke djus dh vk—fr;k¡ cuh gS tks vU;= nqyZHk gS A
+5 & efUnj dk f'k[kj tks djhc 30 QhV Å¡pk vkSj 20 QhV O;kl dk gS] og fcuk che dh Nr ij fLFkr gS A
+6 & efUnj es vUnj ॐ ue: f'kok; cksyus ij blh 'kCn dh çfr/ofu lqukbZ nsrh gS A
+7 & efUnj ds vUnj dSyk'k ioZr dh vk—fr cuh gqbZ gS A ftl ij Hkksys 'kadj fojkteku gS mudh tVk ls xaxk ¼ty&/kkjk½ fudyrh gS A
+8 & 30 QhV O;kl ds efUnj esa ,d Hkh dkye fn[kkbZ ugha nsrk gS A
+9 & efUnj esa cus dSyk'k ioZr ls fudyus okys jus ,oe~ xqQk,¡ n'kZuh; gS A ftues okLrfodrk ds n'kZu gksrs gS A
+10 & efUnj es fojkteku f'ko fyax esa ckjg T;ksfrfyaxks dh vk—fr lekfo"V gS A bl çdkj ds f'ko fyax iwjs ns'k esa fxurh ds gh gS A ftuds n'kZu iq.; nk;d gksrs gS A
+11 & iwjs efUnj dh nhokjks ij ckgj ,oe~ vanj mR—"V 'osr edjkuk laxejej yxk gS] tks pk¡nuh jkr pk¡nh ds leku pedrk gS A
+12 & efUnj es fLFkr f'ko fyax es ckjg T;ksfrfyaZx lekfo"V gS A mudh iwtu] vpZu ,oe~ vfHk"ksd ls ckjg T;ksfrfyaZx dh iwtk] vpZuk ,oe~ vfHk"ksd djus dk iq.; çkIr gksrk gS A
+Hkxoku }kn'k T;ksfrfyax'oj egknso th dk vfHk"ksd iwjs o"kZ çfr fnu çkr: 6 cts ls fd;k tkrk gS A ftl fdlh Hkä dks vfHk"ksd djuk gksrk gS] os efUnj /kke fLFkr dk;kZy; ij tkdj lEidZ djrs gS] ogka ls mUgs vfHk"ksd dh lkexzh dh lwph nh tkrh gS] ;s lkexzh vki Lo;a yk ldrs gS ;k lkexzh dh jkf'k tek dj viuk uke iath;u djk ldrs gS A
+vfHk"ksd ds fy;s vki dks lifjokj çkr: 5-30 Hkkjrh; os'kHkw"kk es mifLFkr gksuk gS A ogk vkpk;ksZ dk ny vkils iwjs fof/kfo/kku ls vfHk"ksd djk;sxs A VªLV dk;kZy; ds esustj Jh tks'kh th gS] mudk eksckby uEcj 07489883462 gS] ;k vki vkpk;Z Jh çeksn th ukxj ftudk eksckby uEcj 09826685451 ls Hkh lEidZ dj ldrs gS A vki Lo;a ds mifLFkr ugh gksus ij vkids uke dk vfHk"ksd vkpk;Z th }kjk fd;k tkosxk] ftldh lwpuk okV~lvi ij ns nh tk;sxh A
+ifjokj dh lq[k le`f)] 'kkafr ,oe~ [kq'kgkyh ds fy;s Hkxoku dk vfHk"ksd vo'; djk;s vkSj rRdky Qy ik;s A
+</pre>
 </div>
 </div>
 </body>
