--- a/pages/sampark.html
+++ b/pages/sampark.html
@@ -21,43 +21,208 @@
 <div id="leftimgpart">
 <h1>lEidZ lw=</h1>
 <!--<img src="../images/rammadir.jpg" class= "textWrapLeft" alt="" width="800" height="600"/>--><p class="articleText"><!--<img src="../images/shivling.jpg" class= "textWrapRight" width="600" height="399" alt=""/>-->
-<table class="articleText" width="100%" border="3" cellspacing="0" cellpadding="0" align="center" style="text-align:center;">
+<table class="articleText" width="90%" border="3" cellspacing="0" cellpadding="0" align="center" style="text-align:center;">
   <tbody>
     <tr>
-      <td>fo/kk;d ,oa VªLVh</td>
-      <td>Jh ukjk;.k flag iaokj</td>
+      <td>ekuuh; Jh vkuUn dqekj th 'kek</td>
+      <td>VªLVh o dysDVj jktx<+ ¼C;kojk½</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>ekuuh; Jh ukjk;.k flag th iaokj</td>
+      <td>VªLVh o fo/kk;d</td>
       <td>09425037566</td>
     </tr>
     <tr>
-      <td>v/;{k</td>
-      <td>Jh eqjkjh yky vxzoky</td>
-      <td>09425038638</td>
+      <td>ekuuh; Jh vf[kys'k th tks'kh</td>
+      <td>VªLVh o v/;{k uxj ikfydk</td>
+      <td>09425038194</td>
     </tr>
     <tr>
-      <td>dks"kk/;{k</td>
-      <td>Jh vkse çdk'k tqykfu;k</td>
-      <td>09479368210</td>
-    </tr>
-    <tr>
-      <td>lfpo</td>
-      <td>Jh ch-,y-ukenso</td>
-      <td>09300444424</td>
-    </tr>
-    <tr>
-      <td>VªLVh</td>
-      <td>Jh vfouk'k dqekj [kjs ,-Mh-ts-</td>
+      <td>Jh vfouk'k dqekj [kj</td>
+      <td>VªLVh o ,- Mh-ts-</td>
       <td>09425038210</td>
     </tr>
     <tr>
+      <td>Jh eqjkjh yky vxzoky ¼pkpk½</td>
+      <td>VªLVh o v/;{k</td>
+      <td>09425038638</td>
+    </tr>
+    <tr>
+      <td>Jh vkse çdk'k tqykfu;k</td>
+      <td>VªLVh o dks"kk/;{k</td>
+      <td>09479388820</td>
+    </tr>
+    <tr>
+      <td>Jh ch- ,y- ukenso</td>
+      <td>VªLVh o lfpo</td>
+      <td>09300444424</td>
+    </tr>
+    <tr>
+      <td>Jh dSyk'k ukjk;.k xqIrk ¼VkVk okys½</td>
       <td>VªLVh</td>
-      <td>Jh dSyk'k ukjk;.k xqIrk] ¼VkVk okys½</td>
       <td>09424429115</td>
     </tr>
     <tr>
+      <td>Jh tqxy fd'kksj xqIrk ¼VkVk okys½</td>
       <td>VªLVh</td>
-      <td>Jh xksfoUn cMksus] i=dkj</td>
+      <td>09826783770</td>
+    </tr>
+    <tr>
+      <td>Jh xksfoUn cM+ksus ¼i=dkj½</td>
+      <td>VªLVh</td>
       <td>09425037599</td>
     </tr>
+    <tr>
+      <td>Jh lqjs'k pUæ vxzoky ¼cqd lsyj½</td>
+      <td>VªLVh</td>
+      <td>09479554708</td>
+    </tr>
+    <tr>
+      <td>Jh eksgu yky ctkt</td>
+      <td>VªLVh</td>
+      <td>09981428138</td>
+    </tr>
+    <tr>
+      <td>Jh fnus'k dqekj eaxy</td>
+      <td>VªLVh</td>
+      <td>09200252777</td>
+    </tr>
+    <tr>
+      <td>Jh fo".kq çlkn vxzoky ¼eqUuk½</td>
+      <td>VªLVh</td>
+      <td>09826743404</td>
+    </tr>
+    <tr>
+      <td>Jh Jh fd'ku lkg</td>
+      <td>lnL;</td>
+      <td>09425442683</td>
+    </tr>
+    <tr>
+      <td>Jh jes'k pUæ 'kekZ</td>
+      <td>lnL;</td>
+      <td>09826871506</td>
+    </tr>
+    <tr>
+      <td>Jh fxjjkt dlsjk</td>
+      <td>lnL;</td>
+      <td>09981611008</td>
+    </tr>
+    <tr>
+      <td>Jh eksgu yky xqIrk ¼ve`r esfMdy½</td>
+      <td>lnL;</td>
+      <td>09406922400</td>
+    </tr>
+    <tr>
+      <td>Jh çks- çeksn [kjs</td>
+      <td>lnL;</td>
+      <td>09425442298</td>
+    </tr>
+    <tr>
+      <td>Jh Jh ukFk nkl lksuh</td>
+      <td>lnL;</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Jh —".k dqekj th mik/;k; ¼isVªksy iEi½</td>
+      <td>lnL;</td>
+      <td>09425037933</td>
+    </tr>
+    <tr>
+      <td>Jh eksgu yky xqIrk ¼feysfu;e½</td>
+      <td>lnL;</td>
+      <td>09179937773</td>
+    </tr>
+    <tr>
+      <td>Jh fnyhi dqekj ctkt</td>
+      <td>lnL;</td>
+      <td>09425442231</td>
+    </tr>
+    <tr>
+      <td>Jh pUæ 'ks[kjttkojk</td>
+      <td>lnL;</td>
+      <td>09179175891</td>
+    </tr>
+    <tr>
+      <td>Jh nkeksnj nkl th xqIrk ,Q-lh-vkbZ-</td>
+      <td>lnL;</td>
+      <td>09981929777</td>
+    </tr>
+    <tr>
+      <td>Jh jktsaæ ljkZQ</td>
+      <td>lnL;</td>
+      <td>09425785832</td>
+    </tr>
+    <tr>
+      <td>Jh vfer dq'kokg ,MoksdsV</td>
+      <td>lnL;</td>
+      <td>09993968217</td>
+    </tr>
+    <tr>
+      <td>Jh xksiky ctkt</td>
+      <td>lnL;</td>
+      <td>09993654343</td>
+    </tr>
+    <tr>
+      <td>Jh ?ku';ke ikjk'kj</td>
+      <td>lnL;</td>
+      <td>09424466122</td>
+    </tr>
+    <tr>
+      <td>Jh uUn fd'kksj vxzoky</td>
+      <td>lnL;</td>
+      <td>09425037583</td>
+    </tr>
+    <tr>
+      <td>Jh jes'k pUæ vxzoky ¼lUr½</td>
+      <td>lnL;</td>
+      <td>09999866255</td>
+    </tr>
+    <tr>
+      <td>Jh fxj/kj vxzoky</td>
+      <td>lnL;</td>
+      <td>09200013072</td>
+    </tr>
+    <tr>
+      <td>Jh nkeksnj nkl xqIrk ¼Hkkust½</td>
+      <td>lnL;</td>
+      <td>07374233266</td>
+    </tr>
+    <tr>
+      <td>Jh clUr dqekj vxzoky</td>
+      <td>lnL;</td>
+      <td>07374232171</td>
+    </tr>
+    <tr>
+      <td>Jh dsnkj ukFk vxzoky</td>
+      <td>lnL;</td>
+      <td>07374233304</td>
+    </tr>
+    <tr>
+      <td>Jh vuwi dqekj vxzoky</td>
+      <td>lnL;</td>
+      <td>07374333284</td>
+    </tr>
+    <tr>
+      <td>Jh vkse çdk'k fot;oxhZ; ¼fnYyh½</td>
+      <td>lnL;</td>
+      <td>09811893773</td>
+    </tr>
+    <tr>
+      <td>Jh e/kq lqnu eqnMk</td>
+      <td>lnL;</td>
+      <td>09026875787</td>
+    </tr>
+    <tr>
+      <td>Jh JhukFk nkl vxzoky</td>
+      <td>lnL;</td>
+      <td>09425036640</td>
+    </tr>
+    <tr>
+      <td>Jh ç'kkUr fot;oxhZ;</td>
+      <td>lnL;</td>
+      <td>09893261994</td>
+    </tr>        
   </tbody>
 </table>
 </p>
