IE and Apple issues fixed and new content added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 			$("#danrashi").click(function(){
 		   	$("#bottomwapper").load('pages/danrashi.html');
 			});						
+			$("#dharmik").click(function(){
+		   	$("#bottomwapper").load('pages/dharmic.html');
+			});
+			$("#samajik").click(function(){
+		   	$("#bottomwapper").load('pages/samajik.html');
+			});				
 			// remaining links
 			
 		});
@@ -168,7 +174,7 @@
      <li><a id="gatividhi" href="#">xfrfof/k;k</a>
     	<ul>
             <li><a id="dharmik" href="#">/kkfeZd</a>
-            	<ul>
+            	<!--<ul>
                 	<li><a id="avishek" herf="#">vfHk"ksd</a></li>
                     <li><a id="ramjanam" herf="#">Jh jke tUeksRlo</a></li>
                     <li><a id="hanumanjenti" herf="#">guqeku t;arh</a></li>
@@ -178,23 +184,23 @@
                     <li><a id="shavnsom" herf="#">Jko.k lkseokj</a></li>
                     <li><a id="shardpurnima" herf="#">'kjn iwf.kZek</a></li>
                     <li><a id="vmala" herf="#">O;k[;ku ekyk</a></li>
-            	</ul>
+            	</ul>-->
             </li>
             <li><a id="samajik" href="#">lkeftd</a>
-            	<ul>
+            	<!--<ul>
                 	<li><a id="samuhikvi" herf="#">lkeqfgd fookg</a></li>
                     <li><a id="netrshivir" herf="#">us= f'kfoj</a></li>
                     <li><a id="rogshivir" herf="#">jksx funku f'kfoj</a></li>
-                </ul>
+                </ul>-->
             </li>
             <li><a id="rastriy" href="#">jk"Vªh;</a>
-            	<ul>
+            	<!--<ul>
              		<li><a id="sevadal" herf="#">lsok ny</a></li>
                     <li><a id="rastriyvip" herf="#">jk"Vªh; foink esa lgk;rk</a></li>
-                </ul>
+                </ul>-->
             </li>
             <li><a id="sheksnik" href="#">'ks{kf.kd</a>
-            	<ul>
+            	<!--<ul>
             		<li><a id="chatrsam" herf="#">Nk= lEeku</a></li>
                     <li><a id="ramyangyan" herf="#">jkek;.k Kku ijh{kk</a></li>
                     <li><a id="tivrbhasn" herf="#">Rofjr Hkk"k.k çfr;ksfxrk</a></li>
@@ -202,7 +208,7 @@
                     <li><a id="antaksari" herf="#">vUrk{kjh</a></li>
                     <li><a id="chitrkala" herf="#">fp=dyk çfr;ksfxrk</a></li>
                     <li><a id="bhajangayan" herf="#">Hktu xk;u çfr;ksfxrk</a></li>
-                </ul>
+                </ul>-->
             </li>
         </ul>
     	</li>
