--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 			$("#dharmik").click(function(){
 		   	$("#bottomwapper").load('pages/dharmic.html');
 			});
-			$("#samajik").click(function(){
+			$("#samajik").click(function(e){
+			e.preventDefault();
 		   	$("#bottomwapper").load('pages/samajik.html');
 			});				
 			// remaining links
