font issue css fixed - need to test

--- a/pages/anjanimandir1.html
+++ b/pages/anjanimandir1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Demo Subpage</title>
+<title></title>
 <link href="../css/submain.css" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
