--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="plugins/anjaniCal.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="plugins/responsiveslides.min.js"></script>
-<script src="jquery.colorbox-min.js"></script>
+<script src="plugins/anjaniLightbox.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
