--- a/pages/anjanimandir1.html
+++ b/pages/anjanimandir1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title></title>
-<link href="../css/submain.css" rel="stylesheet" type="text/css">
+<script src="plugins/anjaniLightbox.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -19,7 +19,9 @@
 <div id="leftimgpart">
 <h1>Jh vatuhyky eafnj</h1>
 <pre class="articleText">
+<a href="images/05.jpg" title="Jh vatuhyky" alt="" class="lightbox_trigger">
 <img src="images/05.jpg" class= "textWrapLeft" alt="anjanilal"/>
+</a>
 Hkxoku Jh vatuhyky th dh çfrek taxy ds e/; ,d pcwrjsa ij lsdM+ksa o"kksaZ ls fojkteku FkhA Hkxoku dh çsj.kk ls djhc 45 o"kZ iwoZ uxj ds dqN ;qod ogka ?kweus tkus yxsaA Hkxoku Jh vatuhyky th dh çsj.kk ls ,d fnu muds eu esa vk;k dh Hkxoku dh çfrek ij xehZ esa /kwi ,oe~ /kwy] o"kkZ _rw esa ty dh Qqgkjs iM+rh gS rks D;ksa u bl pcwrjs ij ,d NksVk lk fVu 'ksM cuk fn;k tk; rHkh vuqekfur O;; dk ctV cuk;k x;kA ctV cuk ek= ₹1500 dk mu fnuksa ;g jkf'k Hkh cMh gksrh FkhA D;ksfd ml le; ,d f'k{kd dk osru gh djhc ₹250 ds vklikl gksrk FkkA rHkh mu ;qodksa }kjk vkil esa nku dh ?kks"k.kk dh xbZ jkf'k gqbZ djhc ₹500 'ks"k jkf'k vkSj ,df=r dj ikus dh vk'kk esa dk;Z çkjEHk djus dh :i js[kk cuus yxh vkSj Hkxoku Jh vatuhyky fd çsj.kk ls Vhu 'ksM ds LFkku ij lhesaV dk ,d NksVk lk eafnj cuok;k tkosA Qy Lo:i mu ;qodks us vius nksLrksa vkSj ifjfprksa ds lkFk vxys fnu mlh LFkku ij ,d ehfVax j[kh] ml ehfVax esa ,d lfefr dk xBu fd;k x;kA dqN gh fnuksa ckn eafnj fuekZ.k dk dk;Z çkjEHk gks x;kA tc dk;Z pyk rks /ku dh deh eglwl gksus yxh rc lfefr ds lnL;] uxj esa nku çkIr djus ds fy;s fudys] ysfdu iwjs uxj esa Hkze.k djus ds i'pkr~ dsoy ₹250 çkIr gq, rHkh lfefr lnL;ksa us fu.kZ; fy;k fd vc bl rjg dHkh Hkh nku ds fy;s uxj esa ugh fudysxs O;fäxr lEidZ ls gh nku ,df=r djsxsA ml fnu ls vkt rd ogh fu;e pyk vk jgk gsA la;ksx ls dqN ekg ckn n'kgjs dk ioZ vk;kA n'kgjs ij çfro"kZ Jh vatuhyky ds LFkku ds lehi gh jko.k o/k dk LFky gS tgk¡ lHkh uxjoklh jko.k o/k ds fy, n'kgjs ij vkrs gSA vkSj jko.k o/k ds mijkar Hkxoku Jh vatuh yky th ds n'kZu ds ckn gh ?kjks dks ykSVrs FksA mUgksaus tc ogk¡ efUnj curs ns[kk rks lHkh dk eu çlUu gks x;kA vkSj yksxks us lfefr ds dkmaVj ij nku nsdj jlhn çkIr dj eafnj fuekZ.k es lg;ksx çnku fd;kA rc ls vkt rd Hkxoku Jh vatuhyky dh —ik ls /ku dh deh ugha jghA Hkxoku Jh vatuhyky Lo;a yksxks ds eu esa çsj.kk nsrs gS vkSj os nku nsrs gsA yksxks dh euksdkeuk,¡ iw.kZ gksrh gs] cM+h cM+h foink;s u"V gksrh gsA
 <img src="images/04.jpg" class= "textWrapRight" alt=""/>
 uxj es ;g fdonfUr;k ihf<+;ksa ls yksx dgrs vk jgs gs dh ;g LFkku cgqr cM+s cM+s lar egkRekvks dh riksLFkyh jgh gsA os ;gk¡ ,dkar es riL;k] lk/kuk] vuq"Bku ,oe~ ti djrs FksA ,d lR; xkFkk gs fd djhc 125 o"kZ iwoZ Jh ujflagth Hkxoku ds efUnj ds egar Lokeh jkenkl th egkjkt tc vtukj unh es Luku djus x, rks mUgksaus ml ikj ,d lwQh lUr dks ns[kk lwQh lUr us egar th dks peRdkj fn[kkus ds fy;s unh ds ikuh ij lkQh ¼,d diMk½ fcNk;k vkSj ml ij cSB dj egar th dh vksj vkus yxs egar jkenklth Hkh igq¡ps gq, lar Fks os le> x, dh ;s lwQh lUr eq>s peRdkj fn[kkuk pkgrk gs mUgksaus ftl f'kyk ¼?kkV dk iFFkj½ ij [kM+s Fks mls vkns'k fn;k dh rq D;k ns[k jgh gs py muds ;g dgrs gh f'kyk mudks ysdj unh esa rSjus yxh chp unh esa nksuksa lUr feys lwQh lUr us egkjkt th ds pj.k idM+dj ekQh ekaxhA vkt Hkh og f'kyk vatuhykyth ds efUnj ds lkeus vyxj th ds uke ls ,d pcwrjs ij fojkteku gSA ujflag Hkxoku dk efUnj Hkh ,d çkphu çfln efUnj gs ftlesa ml le; jkstkuk cgqr ls lk/kq egkRek tekr ds :i esa Bgjrs Fks Lokehth jkst uxj esa fHk{kk ysus ?kjks ds lkeus ls fudyrs Fks ysfdu :drs ugha Fks yksx mudh dkoM+ dh ?kaVh lqudj gh lkeku ysdj vius ?kjks ds lkeus [kM+s jgrs FksA ,sls egku lUrksa dh LFkyh gs ;g /kkeA
