--- a/pages/uplabdhiya.html
+++ b/pages/uplabdhiya.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title></title>
-<link href="../css/submain.css" rel="stylesheet" type="text/css">
+<script src="plugins/anjaniLightbox.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
