--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="colorbox.css">
 <script type="text/javascript" src="plugins/jquery-2.1.3.min.js"></script>
-<script src="plugins/anjaniCal.js"></script>
+<!--<script src="plugins/anjaniCal.js"></script>-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="plugins/responsiveslides.min.js"></script>
 <script src="plugins/anjaniLightbox.js"></script>
@@ -96,8 +96,8 @@
 			$("#sampark").click(function(){
 		   	$("#bottomwapper").load('pages/sampark.html');
 			});		
-			$("#danrashi").click(function(){
-		   	$("#bottomwapper").load('pages/danrashi.html');
+			$("#sadasya").click(function(){
+		   	$("#bottomwapper").load('pages/trustygun.html');
 			});						
 			$("#dharmik").click(function(){
 		   	$("#bottomwapper").load('pages/dharmic.html');
@@ -216,7 +216,7 @@
         <li><a id="etihas" href="#">bfrgkl</a>
         
         </li>
-        <li><a id="danrashi" href="#">nku jkf'k</a>
+        <li><a id="sadasya" href="#">lnL; xM+</a>
         
         </li>
         <li><a id="sampark" href="#">laidZ lw=</a>
@@ -238,15 +238,22 @@
 </ul>
 </div>
 <!--End of slideshow -->
-<!-- Start of google calendar -->
+<!-- Start of google calendar 
 <script type="text/javascript">
 	var googleCalendarId="anjanilalbiaora@gmail.com";
 	var googleCalendarApiKey="AIzaSyDXu-zhIGHYpPAqo6D8TB7vXKEMOFGIEUo";
 	//optional--------------------------
 	var pathToLoadingImage = "./loader.gif";
-</script>
+</script> -->
 <div id="gcalender">
 <div id="gcal">
+<h1>41 okW uojk=h egksRlo</h1>
+<h2>ds vk;kstu ij laxhre;</h2>
+<h1>Jh jke dFkk</h1>
+<h2>fnukad 13 vDVwcj ls 21 vDVwcj 2015
+le; çfr fnu nksigj 1 cts ls</h2>
+<h1>fonq"kh çkph ¼Hkfä os"k.koh½</h1>
+<h2>easuiqjh m- ç- ds Jh eq[k ls</h2>
 </div>
 </div>
 <!-- End of google calendar -->
