--- a/index.html
+++ b/index.html
@@ -247,13 +247,7 @@
 </script> -->
 <div id="gcalender">
 <div id="gcal">
-<h1>41 okW uojk=h egksRlo</h1>
-<h2>ds vk;kstu ij laxhre;</h2>
-<h1>Jh jke dFkk</h1>
-<h2>fnukad 13 vDVwcj ls 21 vDVwcj 2015
-le; çfr fnu nksigj 1 cts ls</h2>
-<h1>fonq"kh çkph ¼Hkfä os"k.koh½</h1>
-<h2>easuiqjh m- ç- ds Jh eq[k ls</h2>
+<img src="images/Navratri2016.jpg" height="675" width="550"/>
 </div>
 </div>
 <!-- End of google calendar -->
