Navratri Mobile fix

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 </script> -->
 <div id="gcalender">
 <div id="gcal">
-<img src="images/Navratri2016.jpg" height="675" width="550"/>
+<img src="images/Navratri2016.jpg" height="100%" width="105%"/>
 </div>
 </div>
 <!-- End of google calendar -->
